Commit of 7 March 2025